--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "admin-lte": "^3.0.0-rc.5",
+    "admin-lte": "^3.0.5",
     "axios": "^0.21.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^2.6.5",
+    "bootstrap": "^4.6.0",
+    "core-js": "^2.6.12",
     "izitoast": "^1.4.0",
     "jquery": "^3.5.1",
     "laravel-vue-pagination": "^2.3.1",
-    "popper.js": "^1.15.0",
+    "popper.js": "^1.16.1",
     "vform": "^1.0.1",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
